--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Vilokana</h1>
+          <h1>smṛti</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
