--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
       .footer a {
         color: #ccccff;
       }
+
+      div.addthis_toolbox {
+        width:180px;
+        margin: 0 auto;
+      }
+
     </style>
   </head>
   <body>
